--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <h1><a href="#">LOGO</a></h1>
         <nav>
           <ul>
-            <li><a href="#">intro</a></li>
-            <li><a href="#">top 3</a></li>
+            <li><a href="#intro">intro</a></li>
+            <li><a href="#top3">top 3</a></li>
             <li><a href="#">gallery</a></li>
             <li><a href="#">work</a></li>
             <li><a href="#">contact</a></li>
@@ -34,23 +34,52 @@
 
     <div class="menu-spacing"></div>
 
-    <section class="intro man-bg section">
+    <section id="intro" class="intro man-bg section">
       <div class="main-content intro-content">
         <div class="intro-text-content">
-          <h2>January Brings Us Firefox 85</h2>
+          <h2>
+            Janeiro<br />
+            traz o Firefox 85
+          </h2>
           <p>
-            To wrap up January, we are proud to bring you the release of Firefox
-            85. In this version we are bringing you support for the
-            :focus-visible pseudo-class in CSS and associated devtools, and the
-            complete removal of Flash support from Firefox.
+            Para encerrar janeiro, temos o orgulho de apresentar a vocês o
+            lançamento do Firefox 85. Nesta versão, estamos trazendo a você
+            suporte para o : pseudo-classe visível de foco em CSS e devtools
+            associados, e o remoção completa do suporte a Flash do Firefox.
           </p>
         </div>
         <div class="intro-img">
-            <img src="/assest/img/java.scrip.svg" alt="Homem branco segurando css, mulher segurando js, homem negro segurando HTML">
+          <img
+            src="/assest/img/java.scrip.svg"
+            alt="Homem branco segurando css, mulher segurando js, homem negro segurando HTML"
+          />
         </div>
       </div>
     </section>
 
-    <section class="white-bg section"></section>
+    <section id="top3" class="white-bg section">
+      <div class="main-content top3-content">
+        <h2>Os três melhores trabalhos</h2>
+        <p>
+          O lançamento de Macs baseados em silicone da Apple no final do ano
+          passado gerou uma enxurrada de cobertura de notícias e algumas
+          surpresas no desempenho da máquina. Esta postagem detalha algumas
+          informações básicas sobre a experiência de portar o Firefox para rodar
+          nativamente nessas CPUs.
+        </p>
+        <p>
+          Começaremos com algumas informações sobre a transição do Mac e daremos
+          uma visão geral dos componentes internos do Firefox que precisavam
+          saber sobre a nova arquitetura, antes de passar para o conceito de
+          binários universais.
+        </p>
+        <p>
+          We’ll then explain how DRM/EME works on the new platform, talk about
+          our experience with macOS Big Sur, and discuss various updater
+          problems we had to deal with. We’ll conclude with the release and an
+          overview of various other improvements that are in the pipeline.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
