--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
   <body class="main-bg">
     <aside class="menu white-bg">
       <div class="main-content menu-content">
-        <h1><a href="#">LOGO</a></h1>
+        <h1><a href="#home">LOGO</a></h1>
         <nav>
           <ul>
             <li><a href="#intro">intro</a></li>
-            <li><a href="#top3">top 3</a></li>
-            <li><a href="#">gallery</a></li>
-            <li><a href="#">work</a></li>
+            <li><a href="#grid-one">grid-one</a></li>
+            <li><a href="#gallery">gallery</a></li>
             <li><a href="#">contact</a></li>
           </ul>
         </nav>
@@ -34,7 +33,7 @@
 
     <div class="menu-spacing"></div>
 
-    <section id="intro" class="intro man-bg section">
+    <section id="home" class="intro man-bg section">
       <div class="main-content intro-content">
         <div class="intro-text-content">
           <h2>
@@ -57,7 +56,7 @@
       </div>
     </section>
 
-    <section id="top3" class="white-bg section">
+    <section id="intro" class="white-bg section">
       <div class="main-content top3-content">
         <h2>Os três melhores trabalhos</h2>
         <p>
@@ -81,5 +80,46 @@
         </p>
       </div>
     </section>
+
+    <section id="grid-one" class="grid-one man-bg section">
+      <div class="main-content grid-one-content">
+        <h2 class="grid-main-heading">My grid</h2>
+        <p class="grid-description">breve descrição</p>
+        <div class="grid">
+          <article>
+            <h3>Teste 1</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla
+              corporis facere error enim veritatis, voluptatibus magni, dolor
+              voluptates obcaecati adipisci debitis harum aspernatur omnis
+              culpa, in voluptate alias expedita. Harum?
+            </p>
+          </article>
+          <article>
+            <h3>Teste 2</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla
+              corporis facere error enim veritatis, voluptatibus magni, dolor
+              voluptates obcaecati adipisci debitis harum aspernatur omnis
+              culpa, in voluptate alias expedita. Harum?
+            </p>
+          </article>
+          <article>
+            <h3>Teste 3</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla
+              corporis facere error enim veritatis, voluptatibus magni, dolor
+              voluptates obcaecati adipisci debitis harum aspernatur omnis
+              culpa, in voluptate alias expedita. Harum?
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section id="gallery" class="section white-bg"></section>
+    <div class="main-content">
+        <h1>Teste</h1>
+    </div>
   </body>
 </html>
