--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
         <h1><a href="#home">LOGO</a></h1>
         <nav>
           <ul>
-            <li><a href="#intro">intro</a></li>
-            <li><a href="#grid-one">grid-one</a></li>
+            <li><a href="#intro">Intro</a></li>
+            <li><a href="#grid-one">Top 3</a></li>
             <li><a href="#gallery">gallery</a></li>
+            <li><a href="#grid-two">work</a></li>
+            <li><a href="#pricing">pricing</a></li>
             <li><a href="#">contact</a></li>
           </ul>
         </nav>
@@ -83,11 +85,82 @@
 
     <section id="grid-one" class="grid-one man-bg section">
       <div class="main-content grid-one-content">
-        <h2 class="grid-main-heading">My grid</h2>
-        <p class="grid-description">breve descrição</p>
+        <h2 class="grid-main-heading">Top 3 Jobs</h2>
+        <p class="grid-description">Aqui estão alguns trabalhos recentes.</p>
         <div class="grid">
           <article>
-            <h3>Teste 1</h3>
+            <h3>Primeiro</h3>
+            <p>
+              Este botão adicionaria uma caixa à linha de caixas de conteúdo-chave abaixo do texto de introdução. Isso deve colocar a caixa lá, independentemente de onde o usuário está escrevendo no momento.
+            </p>
+          </article>
+          <article>
+            <h3>Segundo</h3>
+            <p>
+              Eu sugiro ter um pop-up que pergunta onde na linha inserir a caixa (no início ou no final), qual título dar à caixa, que texto colocar na caixa e para onde a caixa deve ter um link. A caixa inteira deve servir como um link para a página de destino
+            </p>
+          </article>
+          <article>
+            <h3>Terceiro</h3>
+            <p>
+              Você também pode incluir um atributo de tipo contendo o tipo MIME do recurso, para que um navegador possa ver rapidamente quais recursos estão em oferta e ignorar aqueles que não são compatíveis
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section id="gallery" class="grid-one white-bg section">
+      <div class="main-content grid-one-content">
+        <h2 class="grid-main-heading">Gallery</h2>
+        <p class="grid-description">Aqui estão algumas das minhas fotos.</p>
+
+        <div class="grid">
+          <div class="gallery-img">
+            <img
+              src="https://source.unsplash.com/random/360x360?r=1"
+              alt="random image from unsplash"
+            />
+          </div>
+          <div class="gallery-img">
+            <img
+              src="https://source.unsplash.com/random/360x360?r=2"
+              alt="random image from unsplash"
+            />
+          </div>
+          <div class="gallery-img">
+            <img
+              src="https://source.unsplash.com/random/360x360?r=3"
+              alt="random image from unsplash"
+            />
+          </div>
+          <div class="gallery-img">
+            <img src="https://source.unsplash.com/random/360x360?r=4'
+            alt="random image from unsplash">
+          </div>
+          <div class="gallery-img">
+            <img
+              src="https://source.unsplash.com/random/360x360?r=5"
+              alt="random image from unsplash"
+            />
+          </div>
+          <div class="gallery-img">
+            <img
+              src="https://source.unsplash.com/random/360x360?r=6"
+              alt="random image from unsplash"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="grid-two" class="grid-one man-bg section">
+      <div class="main-content grid-one-content">
+        <h2 class="grid-main-heading">Trabalhos Recentes</h2>
+        <p class="grid-description"></p>
+        <div class="grid">
+          <article>
+            <h3>Uma boa</h3>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla
               corporis facere error enim veritatis, voluptatibus magni, dolor
@@ -96,7 +169,7 @@
             </p>
           </article>
           <article>
-            <h3>Teste 2</h3>
+            <h3>Bom trabalho</h3>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla
               corporis facere error enim veritatis, voluptatibus magni, dolor
@@ -105,7 +178,7 @@
             </p>
           </article>
           <article>
-            <h3>Teste 3</h3>
+            <h3>Ao melhor</h3>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla
               corporis facere error enim veritatis, voluptatibus magni, dolor
@@ -116,10 +189,77 @@
         </div>
       </div>
     </section>
+    <section id="pricing" class="white-bg section">
+      <div class="main-content top3-content">
+        <h2>Pricing</h2>
+        <p>
+          O lançamento de Macs baseados em silicone da Apple no final do ano
+          passado gerou uma enxurrada de cobertura de notícias e algumas
+          surpresas no desempenho da máquina. Esta postagem detalha algumas
+          informações básicas sobre a experiência de portar o Firefox para rodar
+          nativamente nessas CPUs.
+        </p>
+        <p>
+          Começaremos com algumas informações sobre a transição do Mac e daremos
+          uma visão geral dos componentes internos do Firefox que precisavam
+          saber sobre a nova arquitetura, antes de passar para o conceito de
+          binários universais.
+        </p>
 
-    <section id="gallery" class="section white-bg"></section>
-    <div class="main-content">
-        <h1>Teste</h1>
-    </div>
+          <div class="resposive-table">
+        <table>
+          <caption>Pricing table</caption>
+
+          <thead>
+            <tr>
+            <th>Title1</th>
+            <th>Title2</th>
+            <th>Title3</th>
+            <th>Title4</th>
+            <th>Title5</th>
+          </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>Content 1</td>
+              <td>Content 2</td>
+              <td>Content 3</td>
+              <td>Content 4</td>
+              <td>Content 5</td>
+              
+            </tr>
+            <tr>
+              <td>Content 1</td>
+              <td>Content 2</td>
+              <td>Content 3</td>
+              <td>Content 4</td>
+              <td>Content 5</td>
+            </tr>
+            <tr>
+              <td>Content 1</td>
+              <td>Content 2</td>
+              <td>Content 3</td>
+              <td>Content 4</td>
+              <td>Content 5</td>
+            </tr>
+          </tbody>
+
+          <tfoot>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>Testando</td>
+            </tr>
+          </tfoot>
+        </table>
+      </div>
+      </div>
+    </section>
+
+
+
   </body>
 </html>
