--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <link rel="stylesheet" href="assest/css/variables.css" />
     <link rel="stylesheet" href="assest/css/classes.css" />
     <link rel="stylesheet" href="assest/css/elements.css" />
@@ -23,12 +22,12 @@
         <h1><a href="#home">LOGO</a></h1>
         <nav>
           <ul>
-            <li><a href="#intro">Intro</a></li>
+            <li><a href="#intro">Introdução</a></li>
             <li><a href="#grid-one">Top 3</a></li>
-            <li><a href="#gallery">gallery</a></li>
-            <li><a href="#grid-two">work</a></li>
-            <li><a href="#pricing">pricing</a></li>
-            <li><a href="#contact">contact</a></li>
+            <li><a href="#gallery">Galeria</a></li>
+            <li><a href="#grid-two">Trabalhos</a></li>
+            <li><a href="#pricing">Preços</a></li>
+            <li><a href="#contact">Contato</a></li>
           </ul>
         </nav>
       </div>
@@ -193,7 +192,7 @@
 
     <section id="pricing" class="white-bg section">
       <div class="main-content top3-content">
-        <h2>Pricing</h2>
+        <h2>Preços</h2>
         <p>
           O lançamento de Macs baseados em silicone da Apple no final do ano
           passado gerou uma enxurrada de cobertura de notícias e algumas
@@ -211,7 +210,7 @@
           <div class="resposive-table">
             
         <table>
-          <caption>Pricing table</caption>
+          <caption>Tabela de preços</caption>
 
           <thead>
             <tr>
