--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <input id= "close-menu" class="close-menu" type="checkbox" aria-label="close menu" role="button">
     <label class="close-menu-label" for="close-menu" title="close menu"></label>
-    <aside class="menu white-bg">
+    <header class="menu white-bg">
       <div class="main-content menu-content">
         <h1 onclick="getElementById('close-menu').checked = false ;"><a href="#home">LOGO</a>
       </h1>
@@ -36,7 +36,7 @@
           </ul>
         </nav>
       </div>
-    </aside>
+    </header>
 
     <div class="menu-spacing"></div>
 
